--- a/03- Networks_101.ipynb
+++ b/03- Networks_101.ipynb
@@ -89,6 +89,72 @@
     "| Typical uses         | Web, Email, File Transfer         | Video, Games, Live Streams      |\n",
     "\n",
     "\n",
+    "## 🔌 Sockets\n",
+    "A **socket** is an **endpoint** for sending or receiving data across a network.  \n",
+    "It connects software (applications) to the network protocols (like TCP and UDP).\n",
+    "\n",
+    "### 🧠 Concept:\n",
+    "A socket is defined by **IP Address + Port Number**, for example:\n",
+    "```\n",
+    "192.168.1.10:8080\n",
+    "```\n",
+    "- **IP address** → identifies the device.  \n",
+    "- **Port number** → identifies the specific application/service on that device.  \n",
+    "Together, they form a **unique connection point**.\n",
+    "\n",
+    "### 💬 Analogy:\n",
+    "- **IP address** → the building address.  \n",
+    "- **Port number** → the apartment number.  \n",
+    "- **Socket** → the door connecting two apartments for conversation.\n",
+    "\n",
+    "\n",
+    "### ⚙️ How It Works\n",
+    "\n",
+    "1. **Server side:**\n",
+    "   - Creates a socket.\n",
+    "   - Binds it to an IP and port (e.g., `0.0.0.0:5000`).\n",
+    "   - Listens for incoming connections.\n",
+    "\n",
+    "2. **Client side:**\n",
+    "   - Creates its own socket.\n",
+    "   - Connects to the server’s socket.\n",
+    "   - Sends and receives data through that connection.\n",
+    "\n",
+    "\n",
+    "### 🧾 Socket Types\n",
+    "\n",
+    "| Type | Protocol | Description |\n",
+    "|------|-----------|--------------|\n",
+    "| **Stream Socket** | **TCP** | Reliable, ordered data transmission (connection-oriented). |\n",
+    "| **Datagram Socket** | **UDP** | Fast, connectionless communication (no guarantee of delivery). |\n",
+    "\n",
+    "\n",
+    "\n",
+    "### 💻 Python Examples\n",
+    "\n",
+    "#### 🖥️ TCP Socket Example\n",
+    "```python\n",
+    "import socket\n",
+    "\n",
+    "# Create a TCP socket\n",
+    "s = socket.socket(socket.AF_INET, socket.SOCK_STREAM)\n",
+    "s.connect((\"example.com\", 80))\n",
+    "s.send(b\"GET / HTTP/1.1\\r\\nHost: example.com\\r\\n\\r\\n\")\n",
+    "response = s.recv(1024)\n",
+    "print(response.decode())\n",
+    "s.close()\n",
+    "```\n",
+    "####⚡ UDP Socket Example\n",
+    "```python\n",
+    "import socket\n",
+    "\n",
+    "s = socket.socket(socket.AF_INET, socket.SOCK_DGRAM)\n",
+    "s.sendto(b\"Hello\", (\"127.0.0.1\", 5000))\n",
+    "data, addr = s.recvfrom(1024)\n",
+    "print(\"Received:\", data.decode(), \"from\", addr)\n",
+    "s.close()\n",
+    "\n",
+    "```\n",
     "\n",
     "## 🧱 TCP/IP Protocol Stack\n",
     "```\n",
@@ -145,8 +211,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
